[Test] Fix validation test on Windows account with spaces in path

--- a/validation-test/CMakeLists.txt
+++ b/validation-test/CMakeLists.txt
@@ -116,7 +116,7 @@ SET(OVT_OPENVIBE_PLAYER ${DIST_BINDIR}/openvibe-scenario-player${CMAKE_EXECUTABL
 IF(UNIX)
 	SET(OVT_OPENVIBE_PLAYER_LOG_FILE "$ENV{HOME}/.config/${OV_CONFIG_SUBDIR}/log/openvibe-scenario-player.log")
 ELSEIF(WIN32)
-	SET(OVT_OPENVIBE_PLAYER_LOG_FILE "$ENV{APPDATA}/${OV_CONFIG_SUBDIR}/log/openvibe-scenario-player.log")
+	SET(OVT_OPENVIBE_PLAYER_LOG_FILE "\"$ENV{APPDATA}/${OV_CONFIG_SUBDIR}/log/openvibe-scenario-player.log\"")
 ENDIF()
 
 FILE(TO_CMAKE_PATH ${OVT_OPENVIBE_PLAYER_LOG_FILE} OVT_OPENVIBE_PLAYER_LOG_FILE)
