[Script] Remove TVicPort

--- a/modules/socket/CMakeLists.txt
+++ b/modules/socket/CMakeLists.txt
@@ -30,7 +30,8 @@ ELSEIF(WIN32)
 ENDIF()
 
 INCLUDE("FindOpenViBECommon")
-INCLUDE("FindThirdPartyTVicPort")
+
+#INCLUDE("FindThirdPartyTVicPort")
 	
 # ---------------------------------
 # Finds standard library winsock
