[Scripts] Update unix-get-dependencies.sh and windows-get-dependencies.ps1 in order to download files from extranet dependencies platform. * Use 7zip executable to unzip archives in ps1 script, and update unix-get-dependencies.sh to make unzip quiet. * Rename windows-install-dependencies.ps1 as windows-get-dependencies.ps1 in order to uniformize naming with studio repository. * Remove url column from manifest and replace it by a version item. Version is read when unzipping dependencies in order to only unzip dependencies whose versions are not up-to-date.     * Move URL definition to environment variable, defined in windows-install-dependencies.cmd, and use one generic URL for data and build dependencies. * Edit file windows-install-dependencies.cmd make it copyable to windows-install-dependencies-custom.cmd and updated with right credentials, to store more easily credentials. * Update README.md file, to explain how to use the file `windows-install-dependencies-auth.cmd-skeleton` to install dependencies + Add version build number to generated zip package.
Tracker Reference: [CORE-1084](https://jira.mensiatech.com/browse/CORE-1084)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ INCLUDE("Utilities")
 INCLUDE("SetProjectVersion")
 set_version()
 OV_SET_PROJECT_VERSION()
-MESSAGE(STATUS "BUILDING VERSION OpenViBE SDK: ${PROJECT_VERSION} Branch : ${OV_PROJECT_BRANCH}~${OV_PROJECT_COMMITHASH}")
+MESSAGE(STATUS "BUILDING VERSION OpenViBE SDK: ${OV_GLOBAL_VERSION_STRING} Branch : ${OV_PROJECT_BRANCH}~${OV_PROJECT_COMMITHASH}")
 
 # Default is to build to dist/. If you wish a custom install, set your own MAKE_INSTALL_PREFIX when you call CMake. Safest to do under a fakeroot.
 MESSAGE(STATUS "Appending compilation flags...")
@@ -155,6 +155,7 @@ elseif(CMAKE_BUILD_TYPE AND OV_PACKAGE)
 	set(CPACK_PACKAGE_VENDOR "Inria & Mensia Technologies")
 	set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
 	set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING.md")
+	set(CPACK_PACKAGE_VERSION ${OV_GLOBAL_VERSION_MAJOR}.${OV_GLOBAL_VERSION_MINOR}.${OV_GLOBAL_VERSION_PATCH}.${OV_GLOBAL_VERSION_BUILD})
 	set(CPACK_PACKAGE_VERSION_MAJOR ${OV_GLOBAL_VERSION_MAJOR})
 	set(CPACK_PACKAGE_VERSION_MINOR ${OV_GLOBAL_VERSION_MINOR})
 	set(CPACK_PACKAGE_VERSION_PATCH ${OV_GLOBAL_VERSION_PATCH})
