--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@ externals/*/
 # *.*~
 
 modules/doc-tmp/
+
+# .build is generated on automated packaging on CI
+.build
+# this file can be copied from skeleton, and updated with appropriate credentials
+scripts/windows-install-dependencies-custom.cmd
+scripts/windows-install-dependencies-x64-custom.cmd
