[Script] Use relative path for build directory variable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,6 @@ IF(WIN32)
 		SET(OV_EIGEN_FLAGS "/arch:SSE2")
 	ENDIF()
 	
-	
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4355 /MP ${OV_EIGEN_FLAGS}")
 	SET(OV_WIN32_BOOST_VERSION "1_58")
 ELSEIF(APPLE)
@@ -135,8 +134,10 @@ elseif(CMAKE_BUILD_TYPE AND OV_PACKAGE)
 	add_definitions(-DOV_CMAKE_PATH_BIN="${CMAKE_INSTALL_PREFIX}/bin")
 	add_definitions(-DOV_CMAKE_PATH_LIB="${CMAKE_INSTALL_PREFIX}/lib")
 	add_definitions(-DOV_CMAKE_PATH_DATA="${CMAKE_INSTALL_PREFIX}/share/openvibe")
-	
-	set(CMAKE_INSTALL_PREFIX .)
+
+	get_filename_component(buildDirRelFilePath "." REALPATH BASE_DIR "${CMAKE_BINARY_DIR}")
+
+	set(CMAKE_INSTALL_PREFIX ${buildDirRelFilePath})
 	set(DIST_ROOT ${CMAKE_INSTALL_PREFIX})
 	set(DIST_BINDIR ${CMAKE_INSTALL_BINDIR})
 	set(DIST_LIBDIR ${CMAKE_INSTALL_LIBDIR})
