[Script] Update cmake variable for packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,10 +139,11 @@ elseif(CMAKE_BUILD_TYPE AND OV_PACKAGE)
 
 	set(CMAKE_INSTALL_PREFIX ${buildDirRelFilePath})
 	set(DIST_ROOT ${CMAKE_INSTALL_PREFIX})
-	set(DIST_BINDIR ${CMAKE_INSTALL_BINDIR})
-	set(DIST_LIBDIR ${CMAKE_INSTALL_LIBDIR})
-	set(DIST_INCLUDEDIR ${CMAKE_INSTALL_INCLUDEDIR})
-	set(DIST_DATADIR ${CMAKE_INSTALL_DATADIR})
+	
+	set(DIST_BINDIR ${DIST_ROOT}/${CMAKE_INSTALL_BINDIR})
+	set(DIST_LIBDIR ${DIST_ROOT}/${CMAKE_INSTALL_LIBDIR})
+	set(DIST_INCLUDEDIR ${DIST_ROOT}/${CMAKE_INSTALL_INCLUDEDIR})
+	set(DIST_DATADIR ${DIST_ROOT}/${CMAKE_INSTALL_DATADIR})
 	set(DIST_DOCDIR ${DIST_ROOT}/doc)
 	set(DIST_DOCTMP ${DIST_ROOT}/doc-tmp)
 	set(CPACK_GENERATOR "ZIP")
