[CMake] Fix the name zip package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,7 +162,15 @@ elseif(CMAKE_BUILD_TYPE AND OV_PACKAGE)
 			OUTPUT_VARIABLE CPACK_SYSTEM_NAME)
 	endif()
 
-	set(CPACK_PACKAGE_NAME "OpenViBE-${CMAKE_BUILD_TYPE}-${PLATFORM-TARGET}")
+	IF("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
+		SET(PLATFORM_TARGET "x64")
+	ELSEIF("${CMAKE_SIZEOF_VOID_P}" EQUAL "4")
+		SET(PLATFORM_TARGET "x86")
+	ELSE()
+		SET(PLATFORM_TARGET "Unknown")
+	ENDIF()
+
+	set(CPACK_PACKAGE_NAME "OpenViBE-${CMAKE_BUILD_TYPE}-${PLATFORM_TARGET}")
 	include(CPack)
 elseif(CMAKE_BUILD_TYPE)
 	# Add directories that OpenViBE will use to look for its components runtime, unless overridden by environment variables in the launch scripts.
@@ -194,12 +202,11 @@ MESSAGE(STATUS "  CMAKE_CXX_FLAGS_DEBUG = '${CMAKE_CXX_FLAGS_DEBUG}'")
 FUNCTION(SET_BUILD_PLATFORM)
 	IF("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
 		ADD_DEFINITIONS(-DTARGET_ARCHITECTURE_x64)
-		SET(PLATFORM_TARGET "x64")
 	ELSEIF("${CMAKE_SIZEOF_VOID_P}" EQUAL "4")
 		ADD_DEFINITIONS(-DTARGET_ARCHITECTURE_i386)
 		SET(PLATFORM_TARGET "x86")
 	ELSE()
-		SET(PLATFORM_TARGET "Unknown")
+		
 		ADD_DEFINITIONS(-DTARGET_ARCHITECTURE_Unknown)
 	ENDIF()
 
