[Script] Fix package generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,12 +140,12 @@ elseif(CMAKE_BUILD_TYPE AND OV_PACKAGE)
 	add_definitions(-DOV_CMAKE_PATH_DATA="${CMAKE_INSTALL_PREFIX}/share/openvibe")
 
 	set(DIST_ROOT ${CMAKE_INSTALL_PREFIX})
-	set(DIST_BINDIR ${DIST_ROOT}/${CMAKE_INSTALL_BINDIR})
-	set(DIST_LIBDIR ${DIST_ROOT}/${CMAKE_INSTALL_LIBDIR})
-	set(DIST_INCLUDEDIR ${DIST_ROOT}/${CMAKE_INSTALL_INCLUDEDIR})
-	set(DIST_DATADIR ${DIST_ROOT}/${CMAKE_INSTALL_DATADIR})
-	set(DIST_DOCDIR ${DIST_ROOT}/doc)
-	set(DIST_DOCTMP ${DIST_ROOT}/doc-tmp)
+	set(DIST_BINDIR ${CMAKE_INSTALL_BINDIR})
+	set(DIST_LIBDIR ${CMAKE_INSTALL_LIBDIR})
+	set(DIST_INCLUDEDIR ${CMAKE_INSTALL_INCLUDEDIR})
+	set(DIST_DATADIR ${CMAKE_INSTALL_DATADIR})
+	set(DIST_DOCDIR doc)
+	set(DIST_DOCTMP doc-tmp)
 	set(CPACK_GENERATOR "ZIP")
 	set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
 	set(CPACK_PACKAGE_DESCRIPTION_SUMMARY ${BRAND_NAME})
@@ -162,15 +162,7 @@ elseif(CMAKE_BUILD_TYPE AND OV_PACKAGE)
 			OUTPUT_VARIABLE CPACK_SYSTEM_NAME)
 	endif()
 
-	IF("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
-		SET(PLATFORM_TARGET "x64")
-	ELSEIF("${CMAKE_SIZEOF_VOID_P}" EQUAL "4")
-		SET(PLATFORM_TARGET "x86")
-	ELSE()
-		SET(PLATFORM_TARGET "Unknown")
-	ENDIF()
-
-	set(CPACK_PACKAGE_NAME "OpenViBE-${CMAKE_BUILD_TYPE}-${PLATFORM_TARGET}")
+	set(CPACK_PACKAGE_NAME "OpenViBE-${CMAKE_BUILD_TYPE}")
 	include(CPack)
 elseif(CMAKE_BUILD_TYPE)
 	# Add directories that OpenViBE will use to look for its components runtime, unless overridden by environment variables in the launch scripts.
