--- a/validation-test/CMakeLists.txt
+++ b/validation-test/CMakeLists.txt
@@ -111,7 +111,13 @@ CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/data/openvibe/openvibe.conf.in ${CMAK
 
 # Utility variable for subproject
 SET(OVT_OPENVIBE_DATA ${CMAKE_CURRENT_BINARY_DIR}/data/openvibe)
-SET(OVT_OPENVIBE_PLAYER ${DIST_BINDIR}/openvibe-scenario-player${CMAKE_EXECUTABLE_SUFFIX})
+IF(EXISTS ${DIST_BINDIR}/openvibe-scenario-player${CMAKE_EXECUTABLE_SUFFIX})
+	SET(OVT_OPENVIBE_PLAYER ${DIST_BINDIR}/openvibe-scenario-player${CMAKE_EXECUTABLE_SUFFIX})
+ELSE()
+	SET(OVT_OPENVIBE_PLAYER ${DIST_ROOT}/bin/openvibe-scenario-player${CMAKE_EXECUTABLE_SUFFIX})
+ENDIF()
+
+MESSAGE(WARNING "OVT_OPENVIBE_PLAYER: ${OVT_OPENVIBE_PLAYER}")
 
 IF(UNIX)
 	SET(OVT_OPENVIBE_PLAYER_LOG_FILE "$ENV{HOME}/.config/${OV_CONFIG_SUBDIR}/log/openvibe-scenario-player.log")
