[Kernel] Improve time precision with vs2013
Reintroduce boost::chrono and boost::thread in ovCTime Class
Minor types update

Tracker Reference: [CORE-1113](https://jira.mensiatech.com/browse/CORE-1113)

--- a/modules/system/CMakeLists.txt
+++ b/modules/system/CMakeLists.txt
@@ -47,8 +47,14 @@ ENDIF(UNIX)
 
 INCLUDE("FindOpenViBECommon")
 
-INCLUDE("FindThirdPartyBoost")
-INCLUDE("FindThirdPartyBoost_Chrono")
+IF(WIN32 AND CMAKE_CXX_COMPILER_ID STREQUAL "MSVC" AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS "19.0")
+	INCLUDE("FindThirdPartyBoost")
+	OV_LINK_BOOST_LIB("system" ${OV_WIN32_BOOST_VERSION})
+	OV_LINK_BOOST_LIB("thread" ${OV_WIN32_BOOST_VERSION})
+	INCLUDE("FindThirdPartyBoost_Chrono")
+ENDIF(WIN32)
+
+
 
 # ---------------------------------
 # Finds standard library winmm
