Fixes to the Linux dependency installer
Moved helper scripts to a subfolder.
Addressed code review remarks in unix-build

[CORE-726](https://jira.mensiatech.com/browse/CORE-726)

--- a/unit-test/CMakeLists.txt
+++ b/unit-test/CMakeLists.txt
@@ -42,7 +42,9 @@ ELSE()
 	SET(CMAKE_FIND_LIBRARY_SUFFIXES ".so" ".a")
 ENDIF()
 
-SET(GTEST_ROOT ${OV_CUSTOM_DEPENDENCIES_PATH}/gtest)
+SET(GTEST_ROOT ${OV_CUSTOM_DEPENDENCIES_PATH}/libgtest)
+SET(GTEST_LIBRARY ${GTEST_ROOT}/libgtest.a CACHE STRING "Full path to gtest library")
+SET(GTEST_MAIN_LIBRARY ${GTEST_ROOT}/libgtest_main.a CACHE STRING "Full path to gtest main library")
 FIND_PACKAGE(GTest REQUIRED)
 INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
 
