[Fix] Allow build without .git folder + fix warning in system
Tracker Reference: [CORE-1129](https://jira.mensiatech.com/browse/CORE-1129)

--- a/modules/system/CMakeLists.txt
+++ b/modules/system/CMakeLists.txt
@@ -43,7 +43,7 @@ SET_TARGET_PROPERTIES(${PROJECT_NAME}-static PROPERTIES
 
 IF(UNIX)
 	SET_TARGET_PROPERTIES(${PROJECT_NAME}-static PROPERTIES COMPILE_FLAGS "-fPIC")
-ENDIF(UNIX)
+ENDIF()
 
 INCLUDE("FindOpenViBECommon")
 
@@ -52,7 +52,7 @@ IF(WIN32 AND CMAKE_CXX_COMPILER_ID STREQUAL "MSVC" AND CMAKE_CXX_COMPILER_VERSIO
 	OV_LINK_BOOST_LIB("system" ${OV_WIN32_BOOST_VERSION})
 	OV_LINK_BOOST_LIB("thread" ${OV_WIN32_BOOST_VERSION})
 	INCLUDE("FindThirdPartyBoost_Chrono")
-ENDIF(WIN32)
+ENDIF()
 
 
 
@@ -83,9 +83,9 @@ IF(WIN32)
 	ELSE(LIB_STANDARD_MODULE_DBGHELP)
 		MESSAGE(STATUS "  FAILED to find dbghelp...")
 	ENDIF(LIB_STANDARD_MODULE_DBGHELP)
-ELSE(WIN32)
+ELSE()
     TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_DL_LIBS})
-ENDIF(WIN32)
+ENDIF()
 
 # ---------------------------------
 # Target macros
