[Base Framework] Simplify ITimeArithmetics formulas to increase precision
Also update the unit test to gtest

--- a/unit-test/openvibe-base/CMakeLists.txt
+++ b/unit-test/openvibe-base/CMakeLists.txt
@@ -19,51 +19,18 @@
 # If not, see <http://www.gnu.org/licenses/>.
 #######################################################################
 
+FUNCTION(SETUP_TEST)
+	SET_BUILD_PLATFORM()
+
+	TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GTEST_BOTH_LIBRARIES})
+
+	INCLUDE("FindOpenViBE")
+	INCLUDE("FindOpenViBECommon")
+ENDFUNCTION()
+
 # Base framework features tests
-PROJECT(openvibe-base-test)
+PROJECT(openvibe-base-time-arithmetic-test)
+ADD_EXECUTABLE(${PROJECT_NAME} uoTimeArithmeticTest.cpp)
+SETUP_TEST()
+ADD_TEST(NAME uoTimeArithmeticTest COMMAND ${PROJECT_NAME})
 
-# ---------------------------------
-# Target macros
-# Defines target operating system
-# Defines target architecture
-# Defines target compiler
-# ---------------------------------
-SET_BUILD_PLATFORM()
-
-# ----------------------
-# Configure test target
-# ----------------------
-
-# Test that needs to called with parameters
-SET(TEST_WITH_PARAM
-)
-
-# Test that needs to called without parameters
-SET(TEST_NO_PARAM
-	uoTimeArithmeticTest.cpp
-)
-
-# Create test sources list
-# This macro auto-generate ${PROJECT_NAME}.cpp
-# in the build tree. ${PROJECT_NAME}.cpp is 
-# the test driver called by ctest to run 
-# the different tests added to this target.
-CREATE_TEST_SOURCELIST (Tests
-	${PROJECT_NAME}.cpp
-	${TEST_WITH_PARAM}
-	${TEST_NO_PARAM}
-	)
-
-ADD_EXECUTABLE(${PROJECT_NAME} ${Tests})
-INCLUDE("FindOpenViBE")
-INCLUDE("FindOpenViBECommon")
-SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${OVT_UNIT_TESTS_FOLDER})
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OVT_UNIT_TOOLKIT_LIB} ${OV_LIBS})
-
-# Add test without parameter to driver 
-FOREACH(test ${TEST_NO_PARAM})
-	GET_FILENAME_COMPONENT(TName ${test} NAME_WE)
-	ADD_TEST(NAME ${TName} COMMAND ${PROJECT_NAME} ${TName})
-ENDFOREACH()
-
-# Add test with parameter to driver
