[Module] Use getaddrinfo to infer ip from a hostname string
Tracker Reference: [CORE-1217](https://jira.mensiatech.com/browse/CORE-1217)

--- a/unit-test/openvibe-module-socket/CMakeLists.txt
+++ b/unit-test/openvibe-module-socket/CMakeLists.txt
@@ -72,5 +72,6 @@ ENDFOREACH()
 SET(LOCALHOST "127.0.0.1")
 SET(TEST_PORT "1024")
 ADD_TEST(NAME uoSocketClientServerBaseTest COMMAND ${PROJECT_NAME} uoSocketClientServerBaseTest ${LOCALHOST} ${TEST_PORT})
+ADD_TEST(NAME uoSocketClientServerHostNameTest COMMAND ${PROJECT_NAME} uoSocketClientServerBaseTest "localhost" ${TEST_PORT})
 ADD_TEST(NAME uoSocketClientServerSyncCommunicationTest COMMAND ${PROJECT_NAME} uoSocketClientServerSyncCommunicationTest ${LOCALHOST} ${TEST_PORT} "1000")
 ADD_TEST(NAME uoSocketClientServerASyncCommunicationTest COMMAND ${PROJECT_NAME} uoSocketClientServerASyncCommunicationTest ${LOCALHOST} ${TEST_PORT} "1000")
