[OpenViBE Plugins] Add box "Continuous Wavelet" in order to be able to produce a Time Frequency stream in OpenViBE SDK.
Tracker reference: CORE-1294

--- a/plugins/processing/signal-processing/CMakeLists.txt
+++ b/plugins/processing/signal-processing/CMakeLists.txt
@@ -6,6 +6,7 @@ SET(PROJECT_VERSION_PATCH ${OV_GLOBAL_VERSION_PATCH})
 SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
 
 FILE(GLOB_RECURSE source_files src/*.cpp src/*.h src/*.hpp src/*.inl)
+INCLUDE("FindSourceDependencyWavelib")
 INCLUDE("FindSourceRCProperties")
 INCLUDE("FindSourceDependencyDSPFilters")
 INCLUDE("FindSourceDependencyR8Brain")
