[Modules] Fix flags in CSV module

--- a/modules/csv/CMakeLists.txt
+++ b/modules/csv/CMakeLists.txt
@@ -19,7 +19,7 @@ ADD_LIBRARY(${PROJECT_NAME}-static STATIC ${source_files})
 SET_TARGET_PROPERTIES(${PROJECT_NAME}-static PROPERTIES
 	VERSION ${PROJECT_VERSION}
 	SOVERSION ${PROJECT_VERSION_MAJOR}
-	COMPILE_FLAGS "-DCSV_Shared, -DCSV_Exports")
+	COMPILE_FLAGS "-DCSV_Static -DCSV_Exports")
 
 IF(UNIX)
 	SET_TARGET_PROPERTIES(${PROJECT_NAME}-static PROPERTIES COMPILE_FLAGS "-fPIC")
