[CMake] Add possibility to override the version

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ modules/doc-tmp/
 # this file can be copied from skeleton, and updated with appropriate credentials
 scripts/windows-install-dependencies-custom.cmd
 scripts/windows-install-dependencies-x64-custom.cmd
+.version
