[Examples] Make external processing example depend on toolkit compilation

--- a/applications/examples/external-processing/CMakeLists.txt
+++ b/applications/examples/external-processing/CMakeLists.txt
@@ -3,6 +3,7 @@ PROJECT(sdk-examples-communication-client-generator)
 SET(source_files src/main-generator.cpp)
 
 ADD_EXECUTABLE(${PROJECT_NAME} ${source_files})
+ADD_DEPENDENCIES(${PROJECT_NAME} openvibe-toolkit)
 
 INCLUDE("FindOpenViBECommon")
 INCLUDE("FindOpenViBEModuleEBML")
