[Test] Add unit tests for Streamed Matrix Encoder/Decoder
CORE-1471

--- a/unit-test/CMakeLists.txt
+++ b/unit-test/CMakeLists.txt
@@ -118,4 +118,4 @@ ADD_SUBDIRECTORY(openvibe-module-system)
 ADD_SUBDIRECTORY(openvibe-base)
 ADD_SUBDIRECTORY(openvibe-toolkit)
 ADD_SUBDIRECTORY(openvibe-kernel)
-
+ADD_SUBDIRECTORY(openvibe-plugin-stream-codecs)
