[Documentation] Fix documentation build script on Windows

--- a/documentation/CMakeLists.txt
+++ b/documentation/CMakeLists.txt
@@ -61,9 +61,12 @@ mv sphinx/build/html \"../doc/NeuroRT Manual\"\n\
 
 FILE(WRITE "${DIST_DOCTMP}/build-documentation.cmd" "\
 setlocal\n\
+setlocal enableextensions\n\
 \n\
-set \"OV_PATH_ROOT=%~dp0\"\n\
+set \"OV_PATH_ROOT=%~dp0\..\"\n\
 set \"PATH=%OV_PATH_ROOT%/bin;%PATH%\"\n\
+set \"TEMPLATE_DIR=sphinx\templates\"\n\
+if not exist %TEMPLATE_DIR% (md %TEMPLATE_DIR%)\n\
 call openvibe-plugin-inspector --box-doc-directory sphinx/templates\n\
 move sphinx\\templates\\index-boxes.rst sphinx\\source\\boxes\n\
 pushd sphinx\n\
