Kernel: Update the external launcher variable to actually work
Note that this is never used by neurort

--- a/kernel/share/openvibe.conf
+++ b/kernel/share/openvibe.conf
@@ -40,9 +40,9 @@ Program_Launcher_PrefixLinux = openvibe-
 Program_Launcher_PrefixMacOS = openvibe-
 Program_Launcher_Prefix = ${Program_Launcher_Prefix${OperatingSystem}}
 
-External_Application_LauncherWindows = ${Path_Bin}/openvibe-external-application-launcher.cmd
-External_Application_LauncherLinux = ${Path_Bin}/openvibe-external-application-launcher
-External_Application_LauncherMacOS = ${Path_Bin}/openvibe-external-application-launcher
+External_Application_LauncherWindows = "${Path_Bin}/openvibe-external-application-launcher.cmd"
+External_Application_LauncherLinux = "${Path_Bin}/openvibe-external-application-launcher"
+External_Application_LauncherMacOS = "${Path_Bin}/openvibe-external-application-launcher"
 External_Application_Launcher = ${External_Application_Launcher${OperatingSystem}}
 
 VRPN_ExternalServerPort = 53883
