--- a/unit-test/unit-toolkit/CMakeLists.txt
+++ b/unit-test/unit-toolkit/CMakeLists.txt
@@ -45,8 +45,8 @@ SET_BUILD_PLATFORM()
 
 ADD_DEFINITIONS( -DPROJECT_VERSION="${PROJECT_VERSION}" )
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
-FILE(GLOB_RECURSE source_files src/*.cpp include/*.h)
-ADD_LIBRARY(${PROJECT_NAME} ${source_files})
+FILE(GLOB_RECURSE SRC_FILES src/*.cpp include/*.h)
+ADD_LIBRARY(${PROJECT_NAME} ${SRC_FILES})
 SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${OVT_TOOLS_FOLDER})
 
 INCLUDE("FindOpenViBE")
