--- a/modules/date/CMakeLists.txt
+++ b/modules/date/CMakeLists.txt
@@ -5,14 +5,14 @@ SET(PROJECT_VERSION_MINOR ${OV_GLOBAL_VERSION_MINOR})
 SET(PROJECT_VERSION_PATCH ${OV_GLOBAL_VERSION_PATCH})
 SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
 
-SET(source_files
+SET(SRC_FILES
 	include/date/defines.h
 	include/date/DateParser.h
 	src/DateParser.cpp
 	)
 
 IF(WIN32)
-	LIST(APPEND source_files
+	LIST(APPEND SRC_FILES
 		"include/date/WindowsDateParser.h"
 		"src/WindowsDateParser.cpp"
 		)
@@ -21,13 +21,13 @@ ENDIF()
 INCLUDE_DIRECTORIES(include/date)
 INCLUDE("FindSourceRCProperties")
 
-ADD_LIBRARY(${PROJECT_NAME} SHARED ${source_files})
+ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC_FILES})
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
 	VERSION ${PROJECT_VERSION}
 	SOVERSION ${PROJECT_VERSION_MAJOR}
 	COMPILE_FLAGS "-DDate_Shared -DDate_Exports")
 	
-ADD_LIBRARY(${PROJECT_NAME}-static STATIC ${source_files})
+ADD_LIBRARY(${PROJECT_NAME}-static STATIC ${SRC_FILES})
 SET_TARGET_PROPERTIES(${PROJECT_NAME}-static PROPERTIES
 	VERSION ${PROJECT_VERSION}
 	SOVERSION ${PROJECT_VERSION_MAJOR}
