--- a/modules/system/CMakeLists.txt
+++ b/modules/system/CMakeLists.txt
@@ -5,7 +5,7 @@ SET(PROJECT_VERSION_MINOR ${OV_GLOBAL_VERSION_MINOR})
 SET(PROJECT_VERSION_PATCH ${OV_GLOBAL_VERSION_PATCH})
 SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
 
-SET(source_files
+SET(SRC_FILES
 	include/system/defines.h
 	include/system/ovCChrono.h
 	include/system/ovCMath.h
@@ -20,7 +20,7 @@ SET(source_files
 	)
 
 IF(WIN32)
-	LIST(APPEND source_files
+	LIST(APPEND SRC_FILES
 		"include/system/WindowsUtilities.h"
 		"src/WindowsUtilities.cpp"
 		)
@@ -29,13 +29,13 @@ ENDIF()
 INCLUDE_DIRECTORIES(include)
 INCLUDE("FindSourceRCProperties")
 
-ADD_LIBRARY(${PROJECT_NAME} SHARED ${source_files})
+ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC_FILES})
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
 	VERSION ${PROJECT_VERSION}
 	SOVERSION ${PROJECT_VERSION_MAJOR}
 	COMPILE_FLAGS "-DSystem_Shared -DSystem_Exports")
 
-ADD_LIBRARY(${PROJECT_NAME}-static STATIC ${source_files})
+ADD_LIBRARY(${PROJECT_NAME}-static STATIC ${SRC_FILES})
 SET_TARGET_PROPERTIES(${PROJECT_NAME}-static PROPERTIES
 	VERSION ${PROJECT_VERSION}
 	SOVERSION ${PROJECT_VERSION_MAJOR}
