--- a/validation-test/openvibe-classification-lda/LDA-Onevsone-HT.xml.in
+++ b/validation-test/openvibe-classification-lda/LDA-Onevsone-HT.xml.in
@@ -1,6 +1,7 @@
 <OpenViBE-Scenario>
-	<Creator>OpenVIBE</Creator>
-	<CreatorVersion>0.0.0</CreatorVersion>
+	<FormatVersion>2</FormatVersion>
+	<Creator>OpenViBE Designer</Creator>
+	<CreatorVersion>2.2.0</CreatorVersion>
 	<Settings></Settings>
 	<Inputs></Inputs>
 	<Outputs></Outputs>
