Fix : gitignore visual software

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ modules/doc-tmp/
 scripts/windows-install-dependencies-custom.cmd
 scripts/windows-install-dependencies-x64-custom.cmd
 .version
+
+# Temp & Software Folder
+.vs/
+.vscode/
